--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,7 @@ span.fa-closeMe span:nth-child(2){
 	position: fixed;
 	top : 0px;
 	left : 0px;
+	z-index: 1;
 }
 .social_href li{
 	display: inline-block;
@@ -163,12 +164,14 @@ table.showTable tbody tr:nth-child(even){
 	background-color: #f6f6f6;
 }
 .search_bar{
-	width: 40%;
-	height:45px;
+	width: 30%;
+	height:36px;
 	margin-bottom: 15px;
 	border-radius: 30px;
 	border:1px solid #555;
 	position: relative;
+	float: left;
+	margin-right : 15px;
 }
 .search_bar input{
 	width: 100%;
@@ -180,8 +183,8 @@ table.showTable tbody tr:nth-child(even){
 .search_bar button{
 	background-color: transparent;
     position: absolute;
-    top: 12px;
-    right: 19px;
+    top: 7px;
+    right: 13px;
     border: none;
 }
 
@@ -206,4 +209,37 @@ ul.paginat_s li a{
 }
 [disabled = "disabled"]{
 	cursor: not-allowed !important;
+}
+.export_dv{
+	float: left;
+	position: relative;
+}
+.export_dv i{
+	width: 40px;
+	height: 40px;
+	background-color: #db3336;
+	text-align: center;
+	line-height: 40px;
+	color: #fff;
+	border-radius: 50%;
+	font-size: 18px;
+	cursor: pointer;
+}
+
+.export_dv ul{
+	width: 36px;
+	position: absolute;
+	top : 100%;
+	transition: 0.2s linear transform,0.1s ease visibility,0.4s linear z-index;
+	transform: translateY(-70%);
+	visibility: hidden;
+	z-index: -1;
+	overflow: hidden;
+	padding-top:5px;
+}
+.export_dv:hover > ul{
+	visibility: visible;
+	overflow: visible;
+	z-index: 1;
+	transform: translateY(0);
 }
